--- a/book-service.properties
+++ b/book-service.properties
@@ -1,4 +1,4 @@
-book.id=878
-book.title=Learning Spring Cloud
-book.pages=756
-book.price=1752.25
+id=878
+title=Learning Spring Cloud
+pages=756
+price=1752.25
